# Poisson

./: CMakeLists.txt  capacitor.geo  circle_centers.ply  convergence_study.py  ply_to_msh.py  poisson.cc  reactor.blend  reactor.ply  run.sh  show_solution.py  vtu_reader.py
src/: assembly_predicates.h  main.cc  mesh.h  mesh_processor.h  poisson.h
